--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello Sayli</title>
+    <title>Hello Savi</title>
 
     <style>
         body {
@@ -25,32 +25,58 @@
         }
 
         .box {
-            background: rgba(255, 255, 255, 0.3);
-            padding: 40px;
-            border-radius: 20px;
-            backdrop-filter: blur(8px);
-            box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.2);
+            background: rgba(255, 255, 255, 0.25);
+            padding: 50px;
+            border-radius: 25px;
+            backdrop-filter: blur(10px);
+            box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.25);
             text-align: center;
+            animation: popIn 1s ease;
+        }
+
+        @keyframes popIn {
+            0% { transform: scale(0.7); opacity: 0; }
+            100% { transform: scale(1); opacity: 1; }
         }
 
         h1 {
-            font-size: 45px;
+            font-size: 50px;
             color: #ffffff;
-            margin: 0;
-            text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
+            margin-bottom: 10px;
+            text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
         }
 
         p {
-            font-size: 22px;
-            color: #fff;
+            font-size: 24px;
+            color: #f7f7f7;
+            margin: 10px 0;
+        }
+
+        .btn {
+            margin-top: 20px;
+            padding: 12px 25px;
+            background: #ffffff;
+            color: #333;
+            border-radius: 30px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: 0.3s ease;
+            border: none;
+        }
+
+        .btn:hover {
+            transform: scale(1.1);
+            background: #ffe8f8;
         }
     </style>
 </head>
 
 <body>
     <div class="box">
-        <h1>Hello Sayli!</h1>
+        <h1>Hello Savi!</h1>
         <p>How are you today? 😊</p>
+        <p>Why were you absent today? Is everything okay???</p>
+        <button class="btn">Reply Now</button>
     </div>
 </body>
 </html>
